--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+pinephone-modem-config (1.3-1) unstable; urgency=medium
+
+  * Remove setup-modem initscript.
+  * Rename modem-setup.sh to pinephone_setup-modem.
+
+ -- Ivan J. <parazyd@dyne.org>  Tue, 12 Jan 2021 12:38:21 +0100
+
 pinephone-modem-config (1.2-1) unstable; urgency=medium
 
   * Add dependency on eg25-manager and temp disable gpsd initscript.
